# husky_panda

./: .gitignore  README.md
husky_panda/: CMakeLists.txt  package.xml
husky_panda_control/: CMakeLists.txt  husky_panda_controller_plugins.xml  package.xml
husky_panda_control/cfg/: HuskyPandaController.cfg
husky_panda_control/config/: joint_state_single.yaml  joint_state_single_dual.yaml
husky_panda_control/include/husky_panda_control/: husky_panda_controller.h  husky_panda_hw_interface.h  odometry.h  speed_limiter.h
husky_panda_control/include/husky_panda_control/core/: config.h  cost.h  data.h  dynamics.h  filter.h  policy.h  rollout.h  solver.h  typedefs.h
husky_panda_control/include/husky_panda_control/policies/: gaussian_policy.h  receding_horizon_spline.h  spline_policy.h
husky_panda_control/include/husky_panda_control/tree_search/experts/: expert.h  expert_base.h  expert_imp.h  expert_norm.h
husky_panda_control/include/husky_panda_control/tree_search/tree/: node.h  tree_manager.h
husky_panda_control/include/husky_panda_control/utils/: gaussian_sampler.h  logging.h  multivariate_normal_eigen.h  savgol_filter.h  utils.h
husky_panda_control/launch/: control.launch  load_param.launch  teleop.launch
husky_panda_control/python/: python.cpp
husky_panda_control/python/notebooks/: gaussian_policy.ipynb  receding_horizon_spline.ipynb  spline_policy.ipynb
husky_panda_control/src/: husky_panda_controller.cpp  husky_panda_hw_interface.cpp  odometry.cpp  speed_limiter.cpp
husky_panda_control/src/core/: config.cpp  cost.cpp  dynamics.cpp  rollout.cpp  solver.cpp
husky_panda_control/src/policies/: gaussian_policy.cpp  receding_horizon_spline.cpp  spline_policy.cpp
husky_panda_control/src/tree_search/experts/: expert.cpp
husky_panda_control/src/tree_search/tree/: node.cpp  tree_manager.cpp
husky_panda_control/src/utils/: gram_savitzky_golay.cpp  savgol_filter.cpp  timer.cpp
husky_panda_control/unittest/: data_logging.cpp  spline.cpp
husky_panda_controller/: CMakeLists.txt  husky_panda_controller_plugins.xml  package.xml
husky_panda_description/: CMakeLists.txt  package.xml
husky_panda_manipulation/: CMakeLists.txt  README.md  package.xml
husky_panda_manipulation/config/: config.rviz  debug.rviz  filter_params.yaml  holonomic_params.yaml  nonholonomic_params.yaml  params.yaml
husky_panda_manipulation/config/multiplot/: base_measured.xml  base_nominal.xml
husky_panda_manipulation/data/: decorations.urdf.xacro  husky.urdf  husky.urdf.xacro  husky_panda.urdf  husky_panda_mobile.urdf.xacro  husky_panda_mobile_model.urdf.xacro  husky_panda_mobile_planar.urdf.xacro  husky_panda_mobile_world.urdf.xacro  husky_panda_planar.urdf  husky_wheels.urdf.xacro  husky_without_wheel.urdf.xacro  panda.urdf.xacro  panda_mobile.urdf.xacro  panda_mobile_fixed.urdf  panda_mobile_gazebo.urdf.xacro  planar_base.urdf.xacro  ridgeback.urdf.xacro  ridgeback.xacro  ridgeback_gazebo.urdf.xacro  ridgeback_panda.urdf  ridgeback_panda_mobile_model.urdf.xacro  ridgeback_panda_mobile_planar.urdf.xacro  ridgeback_without_wheel.urdf.xacro  wheel.urdf.xacro
husky_panda_manipulation/data/accessories/: hokuyo_ust10.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
husky_panda_manipulation/data/objects/: obstacle.urdf  valve.urdf.xacro
husky_panda_manipulation/include/husky_panda_manipulation/: controller_interface.h  cost.h  dimensions.h  dynamics.h  dynamics_ros.h  odometry.h  reference_scheduler.h  speed_limiter.h
husky_panda_manipulation/include/husky_panda_manipulation/params/: cost_params.h  dynamics_params.h  gains.h
husky_panda_manipulation/launch/: common.launch  control.launch  debug_sim.launch  load.launch  ogre.launch  reference_parsing_test.launch
husky_panda_manipulation/params/: controller.yaml  params.yaml
husky_panda_manipulation/scripts/: evaluation.py
husky_panda_manipulation/src/: controller_interface.cpp  cost.cpp  dynamics.cpp  dynamics_ros.cpp  odometry.cpp  reference_scheduler.cpp  speed_limiter.cpp
husky_panda_manipulation/src/nodes/: husky_panda_control.cpp  panda_control.cpp  raisim_rendering_node.cpp
husky_panda_manipulation/src/params/: cost_params.cpp  dynamics_params.cpp  gains.cpp
husky_panda_manipulation/src/tests/: panda_raisim.cpp  reference_parsing.cpp  sim.cpp
husky_panda_manipulation_bamboo/: CMakeLists.txt  package.xml
husky_panda_mobile_control/: CMakeLists.txt  package.xml
husky_panda_mobile_example/: CMakeLists.txt  README.md  package.xml
husky_panda_mobile_example/launch/: husky_panda_control.launch
husky_panda_mobile_example/src/: controller_interface.cpp  cost.cpp  dynamics.cpp  model_tracking.cpp
husky_panda_mobile_example/src/nodes/: husky_panda_control.cpp  model_tracking_node.cpp
husky_panda_mobile_manipulation/: CMakeLists.txt  README.md  package.xml  plugins.xml  ridgeback_panda.gv
husky_panda_mobile_slam_toolbox/: CMakeLists.txt  package.xml
husky_panda_msgs/: CMakeLists.txt  package.xml
husky_panda_rbdl/: CMakeLists.txt  package.xml
husky_panda_ros/: CMakeLists.txt  README.md  package.xml
husky_panda_ros/include/husky_panda_ros/: controller_interface.h  conversions.h  ros_params.h
husky_panda_ros/include/husky_panda_ros/threading/: Rate.hpp  RateOptions.hpp  Worker.hpp  WorkerEvent.hpp  WorkerManager.hpp  WorkerOptions.hpp
husky_panda_ros/launch/: filter_test.launch
husky_panda_ros/msg/: Config.msg  Data.msg  Rollout.msg
husky_panda_ros/scripts/: plot_experiment.py  record_data.py
husky_panda_ros/src/: controller_interface.cpp  conversions.cpp  ros_params.cpp
husky_panda_ros/src/threading/: Rate.cpp  Worker.cpp  WorkerManager.cpp
husky_panda_tools/: CMakeLists.txt  README.md  package.xml
husky_panda_tools/include/husky_panda_tools/: control_gui.hpp  model_tracking_controller.h
husky_panda_tools/src/: control_gui.cpp  model_tracking_controller.cpp
husky_panda_tools/submodules/imgui/: imgui.h  imgui_internal.h  imgui_widgets.cpp
husky_panda_tools/submodules/imgui/docs/: TODO.txt
husky_panda_tools/unittest/: control_gui_test.cpp
(+100 files in other folders)
