<?xml version="1.0"?>
<package format="2">
    <name>husky_panda_control</name>
    <version>0.1.0</version>
    <description>husky_panda_control package</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>eigen</depend>
    <depend>signal_logger</depend>
</package>


