<?xml version="1.0"?>
<package format="2">
    <name>husky_panda_manipulation</name>
    <version>0.1.0</version>
    <description>husky_panda_control package</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>eigen</depend>
    <depend>husky_panda_msgs</depend>
    <depend>husky_panda_control</depend>
    <depend>mppi_panda</depend>
    <depend>mppi_panda_mobile</depend>
    <depend>husky_panda_ros</depend>
    <depend>husky_panda_rbdl</depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>plotjuggler</depend>
    <depend>signal_logger</depend>
</package>


