<?xml version="1.0"?>
<package format="2">
    <name>husky_panda_mobile_example</name>
    <version>0.1.0</version>
    <description>The husky_panda_mobile_example package</description>
    <maintainer email="Gyuhub@todo.todo">Gyuhub</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>roscpp</depend>
    <depend>mppi</depend>
    <depend>mppi_ros</depend>
    <depend>mppi_tools</depend>
    <depend>mppi_pinocchio</depend>
    <depend>mppi_panda</depend>
    <depend>eigen</depend>
    <depend>roslib</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
</package>
