<?xml version="1.0"?>
<package format="2">
    <name>husky_panda_ros</name>
    <version>0.1.0</version>
    <description>husky_panda_ros package</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>husky_panda_control</depend>
    <depend>roscpp</depend>
    <depend>rosbag</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>message_generation</depend>

    <exec_depend>message_runtime</exec_depend>
</package>
